# QuaqraticEquation

./: .travis.yml  CMakeLists.txt  Eq2deg.cpp  Eq2deg.hpp  Eq2degComp.cpp  Eq2degComp.hpp  Eq2degComp_8cpp.html  Eq2degComp_8cpp__incl.md5  Eq2degComp_8hpp.html  Eq2degComp_8hpp__dep__incl.map  Eq2degComp_8hpp__dep__incl.md5  Eq2degComp_8hpp__incl.md5  Eq2degComp_8hpp_source.html  Eq2deg_8cpp.html  Eq2deg_8cpp__incl.md5  Eq2deg_8hpp.html  Eq2deg_8hpp__dep__incl.md5  Eq2deg_8hpp__incl.md5  Eq2deg_8hpp_source.html  README.md  README_8md.html  Utilities.hpp  Utilities_8hpp.html  Utilities_8hpp__dep__incl.map  Utilities_8hpp__dep__incl.md5  Utilities_8hpp__incl.map  Utilities_8hpp__incl.md5  Utilities_8hpp_source.html  _c_test_cost_data_8txt.html  _eq2deg_8hpp_source.html  _eq2deg_comp_8hpp.html  _eq2deg_comp_8hpp_source.html  _utilities_8hpp.html  _utilities_8hpp_source.html  annotated.html  classEq2deg-members.html  classEq2deg.html  classEq2degComp-members.html  classEq2degComp.html  classEq2degComp__coll__graph.md5  (+37 more)
docs/: Eq2deg_8cpp__incl.map  Eq2deg_8hpp__dep__incl.map  Eq2deg_8hpp__incl.map  Eq2deg_8hpp_source.html  _eq2deg_8cpp.html  _eq2deg_8hpp.html  _eq2deg_comp_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  classEq2deg__inherit__graph.md5  class_eq2deg.html  class_eq2deg_comp-members.html  class_utilities-members.html  dir_4a2c4dfd925f922463bca80976e64025.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_80e5431e2c14281a39eac6757a6cb02b.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  (+16 more)
(+73 files in other folders)
